[tool.poetry]
name = "coralslimdigits"
version = "0.1.0"
description = ""
authors = ["Amjad Masad <amjad.masad@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
termcolor = "^1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
